1, 2차시 수업자료 수정

--- a/1차시 수업자료.md
+++ b/1차시 수업자료.md
@@ -40,11 +40,12 @@
     - 자기가 원하는 문자열 출력하기 + 문자열 여러 개 출력하기(부모님께 5줄짜리 편지 쓰기) (10분)
 - 변수
     - 수학의 변수와 변수의 정의, 우리에게 변수가 필요한 이유(5분)
-    - 변수 선언하고, 출력하기(var로 선언하며 타입 추론의 도움을 받도록) (10분)
     - 대표적인 타입 이야기(15분)
         - 숫자
         - 문자열
         - 알고만 있으세요
+        - 타입 추론(타입추론을 사용하는 이유 설명)
+    - 변수 선언하고, 출력하기(10분)
     - 숫자의 연산(5분)
         - +, -, *, /, %
 - 조건문
@@ -55,7 +56,7 @@
     - 참과 거짓을 위한 타입 bool(10분)
         - 참은 true
         - 거짓은 false
-    - 조건문을 순서도로 표현하기(5분)
+    - 조건문의 로직을 순서도로 표현하기(논리적인 로직을 표현할 수 있는 정도로)(5분)
     - 조건문을 의사 코드로 표현하기(10분)
     - 조건문을 kotlin으로 표현하기(10분)
 - 아~주 짧은 복습시간(10분)
