--- a/2차시 수업자료.md
+++ b/2차시 수업자료.md
@@ -15,7 +15,7 @@
         - 1부터 100까지 짝수만 println
     - 반복문 살펴보기(20분)
         - `for i in 1..10`, `if(i % 2 == 0) println(i)`
-        - 인간 디버거가 되어 모든 loop를 하나하나 설명하기
+        - 인간 디버거가 되어 한명씩 차례대로 loop를 하나하나 설명하기
     - 반복문으로 뭔가 해보기(40분)
         - 1부터 10까지 출력
         - 1부터 100까지 홀수만 출력
